# double_pendulum_2025

ML4KP_tests/: acrobot_trajs_test.sh  check_traj_files.py
examples/ML4KP/: trajectory.py
src/cpp/: CMakeLists.txt
src/cpp/ML4KP_interface/: CMakeLists.txt
src/cpp/ML4KP_interface/config/: acrobot.yaml  aorrt.yaml  plan.txt
src/cpp/ML4KP_interface/executables/: CMakeLists.txt  aorrt.cpp  lqr_roa.cpp  lqr_roa_check.cpp  lqr_traj.cpp  populate_params.cpp  trajectory.cpp
src/cpp/ML4KP_interface/simulation/: acrobot.hpp  utils.hpp
src/cpp/cmake/: DoublePendulumConfig.cmake.in
src/cpp/controllers/ilqr/: CMakeLists.txt
src/cpp/model/: CMakeLists.txt
src/cpp/simulator/: CMakeLists.txt
src/cpp/utils/: CMakeLists.txt
src/python/double_pendulum/simulation/: simulation.py
